--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
-section {
-  margin-top: 20px;
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'Oxygen', sans-serif !important;
+  text-transform: uppercase !important;
 }
 
 .boxHelper {
@@ -8,7 +11,6 @@ section {
   text-align: center;
   font-size: 20px;
   text-transform: uppercase;
-  border: 1px solid red;
 }
 
 .boxHelperS {
@@ -34,35 +36,203 @@ section {
   display: none;
 }
 
+/*This is the end of default setup*/
+
+/* Header css starts from here */
 header {
-  background: #2C3047;
-  height: 300px;
+  height:100vh;
+  background-color: rgba( 000, 000, 000, 0.7 );
 }
+
+
+header #headerInt, #headerBut {
+  text-align: center;
+}
+
+header #headerBut {
+  height: 3rem;
+}
+
+/*At the end of headers*/
+
+/*Skills starts from here*/
+
+#skills div {
+  padding: 20px;
+  border: .5px solid grey;
+}
+
+#skills div h2, p {
+  color: black;
+
+}
+
+#skills div h2 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  letter-spacing: 3px;
+  margin-bottom: 1.5rem;
+}
+
+#skills div p {
+  font-size: 13px;
+  font-weight: lighter;
+  text-align: left;
+  line-height: 20px;
+  color: grey;
+}
+
+#skills div a {
+  color: rgb(48, 186, 31);
+  font-weight: lighter;
+  text-align: left;
+  font-size: 11px;
+}
+
+#skills div a:hover {
+  text-decoration: none;
+  color: black;
+  transition: .5s linear;
+}
+
+
+/*At the end of Skills*/
+
+/* Works css starts from here */
+#works {
+  background-color: black;
+}
+
+#works div img {
+  height: 100%;
+  width: 100%;
+}
+
+
+/* Works css starts from here */
 
 .viewWorks {
-  background-color: purple;
-  height: 50px;
+  background-color: rgb(34, 34, 34);
+  height: 100%;
+  padding: 3rem;
 }
 
+.viewWorks button {
+  color: white;
+  background-color: rgb(120, 120, 120);
+  font-size: 15px;
+  width: 60%;
+  border: none;
+  padding: .5em;
+  box-shadow: 3px 3px 3px rgba(191, 191, 191, 0.7);
+}
 
+.viewWorks button:hover {
+  background-color: rgba(33, 33, 33, 0.87);
+  transition: linear .5s;
+  border: .1px solid white;
+}
+
+.viewWorks button:active {
+  transform: scale(0.98);
+  background-color: rgb(82, 82, 82);
+  box-shadow: none;
+  transition:: none;
+}
+
+/* Works css ends from here */
+
+/* About css starts from here */
 #aboutMe {
   text-align: left;
-  background: #2C3047;
-  height: 300px;
+  background: #505050;
+  height: 80vh;
+  padding: 3rem;
   color: white;
 }
 
 #aboutMe hr {
   width: 10%;
-  background-color: red;
+  background-color: #ffffff;
   float: left;
 }
 
 #aboutMe p {
   clear: both;
+  color: white;
 }
+
+#subHobbies div div {
+  padding: 1rem;
+  border: .5px solid lightgrey;
+}
+
+#subHobbies div h2 {
+  color: black;
+  font-size: 15px;
+  font-weight: bold;
+  margin-bottom: 1.5rem;
+}
+
+#subHobbies div p {
+  color: grey;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+/* About css ends from here */
+
+.promoLine {
+  background:rgb(91, 218, 13);
+  height: 6rem;
+  padding: 1rem;
+}
+
+.promoLine button {
+  background: none;
+  border: 3px solid white;
+  padding: 0;
+  color: white;
+  width: 60%;
+  padding: .5em;
+}
+
+
+
+/* Footer css starts from here */
 
 footer {
   background: rgb(14,14,14);
-  height: 150px;
+  height: 5rem;
+  padding: 1rem;
 }
+
+footer div p{
+    color: white;
+    font-size: 12px;
+    float: left;
+}
+
+#footerNav {
+  float: right;
+}
+
+
+#footerNav ul li {
+  display: inline;
+  list-style-type: none;
+  text-align: right;
+}
+
+#footerNav ul li a {
+  color: white;
+  font-size: 20px;
+  margin-right: 3rem;
+}
+
+#footerNav ul li a:hover {
+  color: rgb(32, 98, 246);
+}
+
+/* Footer css ends from here */
