--- a/css/main.css
+++ b/css/main.css
@@ -5,33 +5,6 @@ body{
   text-transform: uppercase !important;
 }
 
-.boxHelper {
-  background-color: #000000;
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  text-transform: uppercase;
-}
-
-.boxHelperS {
-  background-color: #000000;
-  color: white;
-  text-transform: uppercase;
-}
-
-
-.boxHelperT {
-  background-color: darkgrey;
-  color: white;
-  text-align: center;
-}
-
-.text-wrapper {
-  background-color: #000000;
-  color: white;
-  text-transform: uppercase;
-}
-
 .hide {
   display: none;
 }
@@ -41,7 +14,14 @@ body{
 /* Header css starts from here */
 header {
   height:100vh;
-  background-color: rgba( 000, 000, 000, 0.7 );
+  background-color: #000000;
+  background:url('../images/head_bck.jpg') center center no-repeat fixed;
+  background-size: cover;
+  filter: grayscale(100%);
+}
+
+#headerInt {
+  color: white;
 }
 
 
@@ -150,6 +130,9 @@ header #headerBut {
   height: 80vh;
   padding: 3rem;
   color: white;
+  background: url(../images/cont_bckgrd.jpg) center center no-repeat fixed;
+  background-size: cover;
+  filter: grayscale(100%);
 }
 
 #aboutMe hr {
