--- a/css/nav.css
+++ b/css/nav.css
@@ -1,9 +1,9 @@
 
 .ham {
-	width: 60px; height: 55px;
+	width: 50px; height: 50px;
 /* 	background: rgba(255,255,255,0.3); */
 	position: absolute;
-	top: 5%; right: 0;
+	top: 4%; right: -1.5%;
 	transform: translate(-50%, -50%);
 	cursor: pointer;
 }
@@ -43,19 +43,32 @@
 
 .navMap {
   background-color: black;
-  width: 100%;
+  width: 20%;
   height: 100%;
+	position: absolute;
+	top: 0;
+	right: 0;
+
 
 }
 
 
 .navMap nav {
   position: absolute;
-
-  top: 50%;
-  left: 50%;
+  top: 15%;
+  right: 30%;
 }
 
 .navMap ul li {
   display: block;
+	margin-bottom: 5rem;
+}
+
+.navMap ul li a {
+	color: white;
+}
+
+.navMap ul li a:hover {
+	text-decoration: underline;
+	transition: .5s ease-in-out;
 }
